@@ -1,3 +1,7 @@
+Mon Sep  3 06:45:59 UTC 2007 / Arjen de Korte <arjen@de-korte.org>
+
+ * drivers/libusb.c: Remove unused variable and structure.
+
 Sun Sep  2 18:39:39 UTC 2007 / Arjen de Korte <arjen@de-korte.org>
 
  * drivers/usbhid-ups.[ch]:
